User profile values saved using spring jpa data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.port=2017
 server.context-path=/bixi-api
+# Data base detail
+spring.datasource.url=jdbc:postgresql://localhost/bixi
+spring.datasource.username=postgres
+spring.datasource.password=Anand@jesus1
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+
