Added oauth for security for api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
+#Bixi oauth Timeout
+bixi.oauth.tokenTimeout=3600
+
