--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.paytm.pg</groupId>
+			<artifactId>pg-checksum</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -77,6 +82,29 @@
 					commandline using java -jar NAME -->
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>2.5.2</version>
+				<executions>
+					<execution>
+						<id>install-artifact</id>
+						<phase>clean</phase>
+						<configuration>
+							<file>${project.basedir}/lib/paytm-checksum_2.0.jar</file>
+							<repositoryLayout>default</repositoryLayout>
+							<groupId>com.paytm.pg</groupId>
+							<artifactId>pg-checksum</artifactId>
+							<version>1.0</version>
+							<packaging>jar</packaging>
+							<generatePom>true</generatePom>
+						</configuration>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
