--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,4 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
 #Bixi oauth Timeout
-bixi.oauth.tokenTimeout=3600
-
+cross.origin.url=http://localhost:4200
