Config changes added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=2017
 server.context-path=/bixi-api
 # Data base detail
 spring.datasource.url=jdbc:postgresql://localhost/bixi
+spring.jpa.properties.hibernate.default_schema=bschema
 spring.datasource.username=postgres
 spring.datasource.password=Anand@jesus1
 spring.datasource.driver-class-name=org.postgresql.Driver
